--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,8 @@
 	<input type="button" id="sample" value="送信">
 
 	<script>
-		var sock = new WebSocket('wss://html5rocks.websocket.org/echo');
+		//var sock = new WebSocket('wss://html5rocks.websocket.org/echo');
+		var sock = new WebSocket('https://akiitu.github.io/NewTeamPj/test/index.html');
 
 		//接続
 		sock.addEventListener('open', function(e) {
