--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
 
 	<script>
 		//var sock = new WebSocket('wss://html5rocks.websocket.org/echo');
-		var sock = new WebSocket('https://akiitu.github.io/NewTeamPj/test/index.html');
+		var sock = new WebSocket('wss://akiitu.github.io/NewTeamPj/test/index.html');
 
 		//接続
 		sock.addEventListener('open', function(e) {
