--- a/test/index.html
+++ b/test/index.html
@@ -50,7 +50,7 @@
 			form.text.value = '';
 		});
 
-		socket.on('chat', function(msg)){
+		socket.on('chat', function(msg){
 			var li = document.createElement('li');
 
 			li.textContent = msg;
